# snippet

./: LICENSE
multi_thread_worker/: Makefile  README.md  main.cpp  worker.cpp  worker.h
object_pool/: CMakeLists.txt  README.md
object_pool/src/: main.cpp  object_pool.h
object_pool/test/: CMakeLists.txt  test_object_pool.cpp
